--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,9 +30,12 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.presentation.MainActivity"
+            android:configChanges="orientation|screenSize"
             android:exported="true"
             android:theme="@style/Theme.DetectController"
-            android:screenOrientation="portrait">
+            android:screenOrientation="fullSensor"
+            >
+
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
